[tool.poetry]
name = "pino"
version = "0.5.0"
description = "Python json logger inspired by pino.js"
authors = ["Adrien Becchis @Coorpacademy <adriean.khisbe@live.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["log", "logger", "logging", "json"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging"
]
packages = ["pino"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"
tox-pyenv = "*"
tox-travis = "*"
pytest-cov = "*"
codecov = "*"
style = "*"