[tool.poetry]
name = "pino"
version = "0.6.0"
description = "Python json logger inspired by pino.js"
authors = ["Adrien Becchis <adrien.becchis@coorpacademy.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CoorpAcademy/pino.py"
keywords = ["log", "logger", "logging", "json"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging"
]
packages = [{ include = "pino" }]

[tool.poetry.scripts]
pino-pretty = "pino.pretty_cli:main"

[tool.poetry.dependencies]
python = "^3.6"
style = "^1.1.6"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
pytest = "*"
tox = "*"
tox-pyenv = "*"
tox-travis = "*"
pytest-cov = "*"
codecov = "*"
pytest-benchmark = "^3.2.3"

[tool.taskipy.tasks]
test = "tox"
pytest = "pytest --cov=pino"
clean = "rm -r build dist pino.egg-info .tox .pytest_cache .coverage"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py37,py36

[testenv]
deps =
  pytest
  pytest-cov
  pytest-benchmark
commands =
  pytest --cov={envsitepackagesdir}/pino
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
